data-service pt. 1

--- a/docs/bachelorproef.tex
+++ b/docs/bachelorproef.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{wrapfig}
 
 \title{Adobe Experience Manager}
 \author{Mike Heymans}
@@ -33,4 +34,5 @@
 	\input{database-sub-cassandra}
 	\input{database-sub-opzet}
 
+	\include{data-service}
 \end{document}
