--- a/docs/database.tex
+++ b/docs/database.tex
@@ -4,7 +4,6 @@
 \begin{document}
 	\section{De database}
 	Om onze AEM-applicatie te bouwen hebben we nood aan een database waaruit we onze informatie kunnen halen.
-	De manier waarop we deze informatie halen zal afhangen van model tot model daarom zullen we elke mogelijkheid
-	proberen te voorzien tijdens de opzet.
+	De manier waarop we deze informatie halen zal afhangen van model tot model, sommige data zal naar AEM worden gestuurd wanneer deze gewijzigd is, andere zal worden opgehaald wanneer deze vereist is. We zorgen om deze reden dat beide gedachtegangen mogelijk zijn met elk model.
 
 \end{document}
