data-service pt2

--- a/docs/bachelorproef.tex
+++ b/docs/bachelorproef.tex
@@ -10,6 +10,7 @@
 \title{Adobe Experience Manager}
 \author{Mike Heymans}
 \date{2017}
+\renewcommand{\contentsname}{Inhoudstafel}
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
