--- a/docs/reden-van-onderzoek.tex
+++ b/docs/reden-van-onderzoek.tex
@@ -9,20 +9,22 @@
 	Dit komt doordat designers zelf de pagina’s kunnen editeren in plaats van eerst content uit te denken en de realisatie over te laten aan een front-end developer. 
 	\par
 	Toen AS Adventure besloot om zijn huidige website, en die van zijn zusterbedrijven, niet langer uit te besteden aan een extern bedrijf maar deze intern te gaan beheren en ontwikkelen, is er besloten om deze via het AEM-platform op te zetten. 
-	Dit zou het bedrijf in staat stellen om zijn content dagelijks aan te passen zonder dat hiervoor ontwikkeling zou moeten gebeuren. 
+	Dit zou het bedrijf in staat stellen om zijn content volledig door het content team te laten beheren, zonder tussenkomst van webdesigners.
 	Denk maar aan de homepage die van achtergrondafbeelding wijzigt of een gepersonaliseerde pagina voor een merk, allemaal mogelijk dankzij AEM.
 	\par
+	Dat dit allemaal out-of-the-box mogelijk is, is te mooi om waar te zijn. Voor het content team aan de slag kan moeten er componenten gebouwd, deze worden gebouwd door... ontwikkelaars. Eigenlijk komt het erop neer dat componenten de bakstenen vormen om een website op te bouwen en het content team zijn de metsers. Als er nood is aan een baksteen met een nieuwe feature moet hiervoor een aanvraag gedaan worden bij de steenbakkers, gespeeld door de ontwikkelaars. Deze stenen bevatten niet enkel HTML en CSS maar ook Java (en diverse frameworks) zijn nodig om dit nieuw type steen te ontwikkelen.
+	\par
 	Buiten de content die door het marketingteam wordt voorzien is er ook data die vanuit een databank moet komen. 
-	Hierbij hebben we het over data die niet manueel per record wordt aangepast maar met duizenden tegelijk of data die niet enkel betrekking heeft op de site maar ook tijdens andere processen nodig. 
+	Hierbij hebben we het over records die niet manueel worden aangepast maar met duizenden tegelijk of data die niet enkel betrekking heeft op de site maar ook tijdens andere processen een rol spelen. 
 	Een voorbeeld hiervan zijn de prijzen, tijdens de solden is het niet reëel om elke prijs handmatig aan te passen op de pagina’s. 
 	In het onwaarschijnlijke geval dat het handmatig aanpassen van een specifieke prijs nodig is, zou deze data enkel op de pagina gewijzigd zijn en niet in het ERP. 
 	Het is dus logischer om deze wijziging in het ERP te doen en deze te laten doorkomen op de pagina. 
 	Een tweede voorbeeld is een 1+1 gratis actie op bepaalde producten, deze willen we ook via het ERP kunnen instellen en laten doorkomen op de site alsook het weghalen hiervan.
 	\par
-	Toen we aan dit project begonnen zijn, hebben we enkele manieren gevonden om deze wijzigingen weer te geven op de site en toen onze eerst twee sites, Juttu en Yaya, live stonden verliep alles vrij vlot. 
-	Maar deze shops zijn relatief nieuw en beperkt in aanbod, toen de nieuwe AS Adventure site live ging staken er enkele problemen de kop op. Aangezien deze problemen in productie voorkomen was wachten niet echt een optie en hebben we deze opgelost, niet zozeer met de beste maar wel de snelste oplossing.
+	Toen we aan dit project begonnen zijn, hebben we enkele manieren gevonden om deze wijzigingen weer te geven op de site en toen onze eerst twee sites, Juttu en Yaya, live stonden waren we tevreden over het resultaat. 
+	Maar deze shops zijn relatief nieuw en beperkt in aanbod, toen de vernieuwde AS Adventure site live ging staken er enkele problemen de kop op. Aangezien deze problemen in productie voorkomen was wachten niet echt een optie en hebben we deze opgelost, niet zozeer met de beste maar wel de snelste oplossing.
 	\par
 	Deze proef heeft als nut het herzien van wat we hebben opgebouwd, hoe we het AEM-platform aangepast hebben om aan onze behoeften te voldoen en of dit ook effectief de beste manier is om de vereiste functionaliteit te bekomen. 
 	Door het in kaart brengen van onze methodologieën hopen we een dieper inzicht te verwerven in het platform op zich alsook een leidraad te voorzien voor ontwikkelaars die een eerste keer kennis maken met AEM of zij die reeds werken met AEM en geconfronteerd worden met diezelfde problemen waarvoor wij een oplossing zoeken. 
-	Zoals het gezegde luidt: het is goed te leren van je fouten maar beter om te leren uit fouten van een ander..
+	Zoals het gezegde luidt: het is goed te leren van je fouten maar beter om te leren uit die van een ander.
 \end{document}
