--- a/docs/apache-jackrabbit.tex
+++ b/docs/apache-jackrabbit.tex
@@ -7,5 +7,5 @@
 	\par
 	In functie van een CMS applicatie kunnen we onze boom beschouwen als de data op onze pagina's. Onze rootnode is onze homepage en diens kinderen vormen onze navigatie, wanneer we naar de pagina merken navigeren bewegen we ons vanaf onze rootnode naar diens kind 'merken'. De kinderen van de node 'merken' stellen dan elk een effectief merk voor. Omdat de data ongestructureerd is hoeft niet elk merk dezelfde properties te bevatten, tijdens het generen van de pagina kunnen we zaken tonen, of juist niet, aan de hand van de aanwezigheid van bepaalde properties. Dit is een voorbeeld om aan te tonen hoe je met JCR een website kunt opbouwen.
 	\par
-	Apache Jackrabbit is Apaches implementatie van JCR en is geïntegreerd in Apache Sling.
+	Het is belangrijk om te begrijpen dat het niet de bedoeling is om traditionele data op te slagen in JCR, enkel content. Apache Jackrabbit is Apaches implementatie van JCR en is geïntegreerd in Apache Sling.
 \end{document}
