--- a/docs/server-side-includes.tex
+++ b/docs/server-side-includes.tex
@@ -8,4 +8,9 @@
 	\subsubsection{Hoe werkt het?}
 	
 	\subsubsection{Waarom SSI?}
+    Binnen AEM kunnen we templates bouwen aan de hand van bestaande componenten, een goed voorbeeld is een template die een navigatie bevat, we willen immers op de meeste pagina's onze navigatie tonen. Wanneer deze template gebruikt wordt genereren we een pagina met daarop onze navigatie en een gespecifieerde inhoud. Als een gebruiker deze pagina ophaalt passeert dit verzoek de dispatcher, als de pagina nog in zijn cache zit kan deze onmiddelijk worden weergegeven. Indien dit niet het geval is moet deze opgehaalt worden bij een publisher en vervolgens wordt deze op de dispatcher gecached. Dit betekent dat de pagina gecached wordt met navigatie inbegrepen. 
+    \par
+    Zolang de navigatie ongewijzigd blijft brengt dit geen problemen te weeg. Stel nu dat er een nieuwe categorie aangemaakt wordt en deze zichtbaar moet worden in de navigatie. We hebben in het vorige hoofdstuk gezien hoe we categorie pagina's kunnen maken en hoe de navigatie deze oppikt. Het enige obstakel om deze live te krijgen is de dispatcher die de navigatie heeft gecached. We kunnen wachten tot deze verloopt maar dit tijdstip is voor elke pagina anders. Langzaam aan zullen de gecachte pagina's verlopen waardoor deze opnieuw moeten worden opgehaald met de nieuwe navigatie. Tijdens deze overgangsperiode zal de navigatie op onze website inconsistent zijn, sommige pagina's hebben de oude (gecachte) versie en andere hebben de nieuwe.
+    \par
+    Sommige lezers zullen nu denken: \"We kunnen toch de hele cache tegelijk invalideren? Dan moet de dispatcher wel de nieuwe versie ophalen.\". Deze gedachtegang is correct maar heeft \'en\'en groot nadeel: de publisher moet dan mogelijk enkele honderden pagina's tegelijk genereren wat kan leiden tot een crash. Buiten piekuren en met een beperkt aantal pagina's kan deze methode haalbaar zijn, voor een internationale enterprise applicatie is dit niet realistisch en moet er een andere oplossing gezocht worden.
 \end{document}
