--- a/docs/server-side-includes.tex
+++ b/docs/server-side-includes.tex
@@ -4,13 +4,19 @@
 \begin{document}
 	\subsection{Server Side Includes} 
 	\subsubsection{Wat is het?}
-	
-	\subsubsection{Hoe werkt het?}
-	
+	SSi is een scriptingstaal die de mogelijkheid biedt om data in een bestaande html-pagina te injecteren. Deze injectie kan een effectief bestand betreffen maar kan evengoed een functie zijn, bv. de huidige datum ophalen. Vlak voor het versturen van de html zal de webserver alle SSI commando's opsporen en omzetten naar gewone html. De bestandtypes die men via SSI ophaalt kan verschillende vormen aannemen waaronder Json (bv. het resultaat van een rest call) en html (bv. een footer die geïnjecteerd wordt). In het geval van Json zou men het resultaat kunnen gebruiken voor een javascript functie, bij html kan deze rechtstreeks worden afgebeeld. Best practice is om de SSI commando's in commentaar te zetten zodat deze verdwijnen wanneer de webserver SSI niet ondersteund.
 	\subsubsection{Waarom SSI?}
-    Binnen AEM kunnen we templates bouwen aan de hand van bestaande componenten, een goed voorbeeld is een template die een navigatie bevat, we willen immers op de meeste pagina's onze navigatie tonen. Wanneer deze template gebruikt wordt genereren we een pagina met daarop onze navigatie en een gespecifieerde inhoud. Als een gebruiker deze pagina ophaalt passeert dit verzoek de dispatcher, als de pagina nog in zijn cache zit kan deze onmiddelijk worden weergegeven. Indien dit niet het geval is moet deze opgehaalt worden bij een publisher en vervolgens wordt deze op de dispatcher gecached. Dit betekent dat de pagina gecached wordt met navigatie inbegrepen. 
+    Binnen AEM kunnen we templates bouwen aan de hand van bestaande componenten, een goed voorbeeld is een template die een navigatie bevat, we willen immers op de meeste pagina's onze navigatie tonen. Wanneer deze template gebruikt wordt genereren we een pagina met daarop onze navigatie en een gespecifieerde inhoud. Als een gebruiker deze pagina ophaalt passeert dit verzoek de dispatcher, als de pagina nog in zijn cache zit kan deze onmiddelijk worden weergegeven. Indien dit niet het geval is moet deze opgehaalt worden bij een publisher, vervolgens wordt deze op de dispatcher gecached en doorgestuurd naar de gebruiker. Dit betekent dat de hele pagina, inclusief navigatie, gecached wordt op de dispatcher. 
     \par
-    Zolang de navigatie ongewijzigd blijft brengt dit geen problemen te weeg. Stel nu dat er een nieuwe categorie aangemaakt wordt en deze zichtbaar moet worden in de navigatie. We hebben in het vorige hoofdstuk gezien hoe we categorie pagina's kunnen maken en hoe de navigatie deze oppikt. Het enige obstakel om deze live te krijgen is de dispatcher die de navigatie heeft gecached. We kunnen wachten tot deze verloopt maar dit tijdstip is voor elke pagina anders. Langzaam aan zullen de gecachte pagina's verlopen waardoor deze opnieuw moeten worden opgehaald met de nieuwe navigatie. Tijdens deze overgangsperiode zal de navigatie op onze website inconsistent zijn, sommige pagina's hebben de oude (gecachte) versie en andere hebben de nieuwe.
+    Zolang de navigatie ongewijzigd blijft brengt dit geen problemen te weeg. Stel nu dat er een nieuwe categorie aangemaakt wordt en deze zichtbaar moet worden in de navigatie. We hebben in het vorige hoofdstuk gezien hoe we categorie pagina's kunnen maken en hoe de navigatie deze oppikt. Het enige obstakel om deze live te krijgen is de dispatcher die de navigatie op elke pagina apart heeft gecached. We kunnen wachten tot deze verloopt maar dit tijdstip is voor elke pagina anders. Langzaam aan zullen de gecachte pagina's verlopen waardoor deze opnieuw moeten worden opgehaald (met de nieuwe navigatie). Tijdens deze overgangsperiode zal de navigatie op onze website inconsistent zijn, sommige pagina's hebben de oude (gecachte) versie en andere hebben reeds de nieuwe.
     \par
     Sommige lezers zullen nu denken: \"We kunnen toch de hele cache tegelijk invalideren? Dan moet de dispatcher wel de nieuwe versie ophalen.\". Deze gedachtegang is correct maar heeft \'en\'en groot nadeel: de publisher moet dan mogelijk enkele honderden pagina's tegelijk genereren wat kan leiden tot een crash. Buiten piekuren en met een beperkt aantal pagina's kan deze methode haalbaar zijn, voor een internationale enterprise applicatie is dit niet realistisch en moet er een andere oplossing gezocht worden.
+    \par
+    Deze oplossing kan men bekomen met het gebruik van SSI, in plaats van onze template rechtstreeks van de navigatie component te voorzien gebruiken we SSI om deze toe te voegen. Als men nu een pagina opvraagt zal de dispatcher deze laten genereren door de publisher maar deze zal de SSI-tag nog niet resolven. Deze tag wordt mee gecached, met de rest van de pagina, en zal pas op het laatste moment ervoor zorgen dat de navigatie wordt geïnjecteerd. Wanneer deze injecte moet gebeuren zal de dispatcher de navigatie opvragen bij de publisher en deze cachen. Alle pagina's gaan nu de gecachte versie van onze navigatie injecteren en als deze wijzigt volstaat het om enkel de cache van de navigatie te invalideren.
+    \par
+    Het is belangrijk om te bezeffen dat SSI enkel op de dispatcher zal worden uitgevoerd wat geen probleem vormt in productie, elk request passeert hier. Voor het contentteam vormt dit wel een probleem, zij werken op de author en aangezien deze de injectie niet gaat uitvoeren zullen zij de navigatie niet te zien krijgen tijdens het editeren van pagina's. Een mogelijkheid is om overal waar men SSI wil gebruiken deze tag in een IF-statement te incapsuleren, indien de pagina niet vanop de author wordt opgevraagt gebruikt men de tag, anders injecteert men de data rechtstreeks.
+	\subsubsection{De nadelen}
+    E\'en nadeel hebben we reeds gezien, om het editeren van pagina's aangenaam te houden moeten we overal waar we SSI willen gebruiken extra statements voorzien om hetzelfde resultaat op de author te bekomen. Bij uitbundig gebruik kan dit leiden tot onoverzichtelijke code die moeilijk te onderhouden is.
+    \par
+    Een ander nadeel is dat de commando's worden uitgevoerd vlak voor de webserver de html verstuurd. Dit heeft als gevolg dat de gebruiker moet wachten tot alle commando's zijn uitgevoerd voor hij de pagina te zien krijgt. Als we een andere html injecteren zal deze wachttijd nihil zijn. Wanneer men meerdere rest calls wil doen kan, afhankelijk van de duur van deze calls, de wachttijd oplopen. In dit geval moet men de overweging maken om over te stappen op javascript waar de calls worden uitgevoerd nadat de pagina is geladen. 
 \end{document}
